# frog-scraper

./: .gitignore  pyproject.toml  tocheck.json
frog_scraper/: frog_scraper.py
