[tool.poetry]
name = "frog-scraper"
version = "0.1.0"
description = ""
authors = ["Colin Rathbun <rathbunc@dickinson.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
